examples/test/testpolicy5495.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5495
  namespace: namespace38
spec:
  podSelector:
    matchLabels:
      key41: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value39
      podSelector:
        matchLabels:
          key39: value7
          key9: value8
          key45: value36
